--- a/src/views/admin/preview-dashboard.ejs
+++ b/src/views/admin/preview-dashboard.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="/css/admin-dashboard.css" rel="stylesheet">
 </head>
-<body>
+<body data-admin-id="<%= admin.id %>">
     <!-- Header -->
     <header class="header">
         <div class="header-content">
